--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.9.0"
   },
+  "engines": {
+    "node": "14.17.5"
+  }
   "browserslist": [
     "> 1%",
     "last 2 versions",
